cleanup setenv
Signed-off-by: Sergii Kabashniuk <skabashniuk@redhat.com>